6399903 Support for Kerberos Records in LDAP Directory (fix build, ELF versioning)

--- a/usr/src/cmd/krb5/Makefile
+++ b/usr/src/cmd/krb5/Makefile
@@ -35,10 +35,12 @@ _msg:	$(SUBDIRS)
 
 .KEEP_STATE:
 
-
 all clean clobber delete install lint catalog package: $(SUBDIRS)
 
 check: $(CHECKHDRS)
+
+# ldap_util has a dependency on kadmin/cli/getdate.o
+ldap_util: kadmin
 
 $(SUBDIRS):	FRC
 	@cd $@; pwd; $(MAKE) $(TARGET)
