PSARC/2007/277 tsalarm library 6553178 The tsalarm library is needed for Turgo.

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -442,6 +442,7 @@ sparc_SUBDIRS= \
 	lib/libdscp \
 	lib/libpri \
 	lib/libpcp \
+	lib/libtsalarm \
 	stand
 
 $(CLOSED_BUILD)COMMON_SUBDIRS += $(CLOSED)/cmd/mtst
