--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -346,6 +346,7 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS_32	+= sbpro
 #
 
 DRV_KMODS	+= e1000g
+DRV_KMODS	+= mxfe
 DRV_KMODS	+= rge
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= ixgb
 
