--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1353,6 +1353,8 @@ RAL_OBJS += rt2560.o ral_rate.o
 
 RTW_OBJS += rtw.o smc93cx6.o rtwphy.o rtwphyio.o
 
+MXFE_OBJS += mxfe.o
+
 #
 #	Build up defines and paths.
 #
