5087108 RFE: rtls support for SPARC 6599717 rtls should support suspend/resume

--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -253,6 +253,7 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= isp
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= llc2
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= mpt
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= se
+$(CLOSED_BUILD)CLOSED_DRV_KMODS += rtls
 
 #
 #       Hardware Drivers in common space
