--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1331,6 +1331,8 @@ RPCIB_OBJS += rpcib.o
 
 KMDB_OBJS += kdrv.o
 
+AFE_OBJS += afe.o
+
 BGE_OBJS += bge_main2.o bge_chip2.o bge_kstats.o bge_log.o bge_ndd.o \
 		bge_atomic.o bge_mii.o bge_send.o bge_recv2.o
 
