--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -259,6 +259,7 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS += rtls
 #       Hardware Drivers in common space
 #
 
+DRV_KMODS	+= afe
 DRV_KMODS	+= e1000g
 DRV_KMODS	+= mxfe
 DRV_KMODS	+= pcan
